[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Props/tileset.png" type="Texture" id=2]
[ext_resource path="res://Fonts/FontResource.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sound/coin.wav" type="AudioStream" id=4]
[ext_resource path="res://Sound/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/shoot.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "Falling"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jumping"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Snooze"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.08513, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 20, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angular_velocity = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 9 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 6
frame = 4
region_enabled = true
region_rect = Rect2( 16, 16, 96, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.333, 0.333 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Falling = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Jumping = SubResource( 4 )
anims/Snooze = SubResource( 5 )
anims/Walking = SubResource( 6 )

[node name="CurrencyBalloon" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -29.1672 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 64, 32, 32 )

[node name="CurrencyLabel" type="Label" parent="CurrencyBalloon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -26.8328
margin_right = 4.0
margin_bottom = -12.8328
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "123"
align = 1

[node name="CurrencyBalloonTimeout" type="Timer" parent="."]
autostart = true

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="HurtParticles" type="Particles2D" parent="."]
emitting = false
amount = 64
lifetime = 2.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="CurrencyBalloonTimeout" to="." method="_on_CurrencyBalloonTimeout_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
